# downquark.templateCore.BaseQuarks

./: LICENSE  README.md
Browser/: .gitignore  .gitkeep  (+3 more)
Python/basequark-python/: CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
Python/basequark-python/basequark_python/: __init__.py  __main__.py  basequark.py
Python/basequark-python/basequark_python/actions/: __init__.py
Python/basequark-python/basequark_python/actions/retrievers/: __init__.py
Python/basequark-python/basequark_python/actions/triggers/: __init__.py
Python/basequark-python/basequark_python/actions/triggers/commands/: __init__.py
Python/basequark-python/basequark_python/interfaces/: __init__.py
Python/basequark-python/basequark_python/interfaces/inputs/commands/: __init__.py
Python/basequark-python/basequark_python/interfaces/inputs/statics/: __init__.py
Python/basequark-python/basequark_python/interfaces/outputs/_ui/: __init__.py
Python/basequark-python/basequark_python/interfaces/outputs/_ui/data/: __init__.py
Python/basequark-python/basequark_python/interfaces/outputs/_ui/layout/: __init__.py
Python/basequark-python/basequark_python/logic/: __init__.py
Python/basequark-python/basequark_python/logic/hexagonal/: __init__.py
Python/basequark-python/basequark_python/logic/hexagonal/data/: __init__.py
Python/basequark-python/basequark_python/logic/hexagonal/handlers/: __init__.py
Python/basequark-python/basequark_python/logic/hexagonal/objects/: __init__.py
Python/basequark-python/basequark_python/logic/hexagonal/queries/: __init__.py
Python/basequark-python/basequark_python/processes/: __init__.py
Python/basequark-python/basequark_python/processes/hexagonal/functions/: __init__.py
Python/basequark-python/basequark_python/ui/: __init__.py
Python/basequark-python/basequark_python/ui/data/: __init__.py
Python/basequark-python/basequark_python/ui/functions/: __init__.py
Python/basequark-python/basequark_python/ui/layout/: __init__.py
Python/basequark-python/basequark_python/utils/: __init__.py  database.rdbms.py
Python/basequark-python/basequark_python/utils/interface/: __init__.py
Python/basequark-python/basequark_python/utils/process/: __init__.py
Python/basequark-python/docs/: index.md  modules.md
Python/basequark-python/tests/hexagonal/handlers/: __init__.py  test_run.py
Rust/Native/basequark-rust/: .gitignore  Cargo.toml
Rust/Native/basequark-rust/config/: .gitkeep  development.toml
Rust/Native/basequark-rust/config/env/: ReadMe.md
Rust/Native/basequark-rust/dq/: .gitkeep
Rust/Native/basequark-rust/dq/macros/: Cargo.toml
Rust/Native/basequark-rust/dq/macros/src/: lib.rs  persistence.rs
Rust/Native/basequark-rust/dq/macros/src/persistence/: arango.rs  maria.rs
Rust/Native/basequark-rust/dq/state/: Cargo.toml  ReadMe.md
Rust/Native/basequark-rust/dq/state/src/: base.rs  lib.rs
Rust/Native/basequark-rust/dq/symbols/: ReadMe.md
Rust/Native/basequark-rust/dq/symbols/src/: lib.rs
Rust/Native/basequark-rust/dq/symbols/src/structs/: _downquark.rs
Rust/Native/basequark-rust/dq/utils/: Cargo.toml
Rust/Native/basequark-rust/dq/utils/src/: configurations.rs  constants.rs  helpers.rs  hooks.rs  lib.rs  logging.rs
Rust/Native/basequark-rust/src/: lib.rs  main.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/: Cargo.toml  tauri.conf.json5
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/enhancements/src/: lib.rs  mechanisms.rs  widgets.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/macros/: ReadMe.md
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/macros/src/: lib.rs  macros.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/services/: Cargo.toml  _ref.md
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/services/src/: database.rs  lib.rs  protocol.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/symbols/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/symbols/src/: structs.rs  traits.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/utils/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/basequark/utils/src/: configurations.rs  enums.rs  lib.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/capabilities/: default.json
Rust/Tauri/basequark-rust-tauri/src-tauri/config/: _default.toml  development.toml  production.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/_base/commands/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/_base/commands/src/: commands.rs  lib.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/_base/state/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/_base/state/src/: immutable.rs  lib.rs  mutable.rs  state.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/commands/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/commands/src/: commands.rs  lib.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/commands/src/commands/: cmd.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/devqon/enhancements/src/: lib.rs  widgets.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/devqon/utils/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/devqon/utils/src/: helpers.rs  lib.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/network/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/network/src/: lib.rs  network.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/network/src/network/: connect.rs  http.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/particle_flows/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/particle_flows/src/: flows.rs  lib.rs  particles.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/standards/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/standards/src/: lib.rs  stdin.rs  stdlib.rs  stdout.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/state/: Cargo.toml
Rust/Tauri/basequark-rust-tauri/src-tauri/downquark/state/src/: immutable.rs  lib.rs  mutable.rs  state.rs
Rust/Tauri/basequark-rust-tauri/src-tauri/src/: lib.rs  main.rs
(+123 files in other folders)
