[package]
name = "downquark_rust_native"
version = "0.0.0-pre-alpha"
authors = ["mlnck"]
description = "Rust Default Build Template for DownQuark"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "downquark_rust_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
resolver = "2"
members = [
    "./dq/macros",
    "./dq/symbols",
    "./dq/utils"
]
[workspace.package]
version = "0.4.0-pre-release"
edition = "2021"
authors = ["downquark <development.qonsole@downquark.work>"]

[dependencies]
