[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.1" # compiles from /Native/config/*
# reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.213", features = ["derive"] }
# toml = "0.8.19"
