[package]
name = "commands"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
tauri = "2.0.6"

symbols = { path = "../../basequark/symbols" }
