[package]
name = "particle_flows"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "ipnetwork",
    # "macros", "migrate",
    "mysql",
    "runtime-async-std",
    "tls-rustls",
] }
async-std = { version = "1.7.0", features = ["attributes"]}
